# MyLife

./: Cargo.toml  README.md  package-lock.json
frontend/website/: package-lock.json  package.json
frontend/website/public/: index.html
frontend/website/src/: App.css  App.js  DetailedComp.js  index.js  maincontent.css  unused_MainPage.js
frontend/website/src/components/: Accounts.js  CardComp.js  MainContent.js  ProfilePage.js  TimelineUI.js  unused_Chatbox.js
migrations/2024-03-29-222152_create_accounts/: up.sql
migrations/2024-04-08-231149_recreate_accounts_table/: up.sql
migrations/2024-04-08-233940_recreate_accounts_table2/: up.sql
migrations/2024-04-08-234802_recreate_accounts_table3/: up.sql
migrations/2024-04-24-034857_add_userprofile_table/: down.sql  up.sql
migrations/2024-05-01-031719_erasetwofields_addtables/: down.sql  up.sql
src/: api.rs  main.rs  model.rs  schema.rs  user.rs
