[package]
name = "mylife_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
diesel = { version = "2.1.5", features = ["postgres","r2d2","chrono"] }
diesel_migrations = "2.1.0"
actix-rt = "2.9.0"
dotenv = "0.15.0"
bcrypt = "0.15.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.7.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.17"
async-openai = "0.21.0"
